--- a/journal.html
+++ b/journal.html
@@ -179,7 +179,7 @@
     Le but des 2 séances "informatique" était de manipuler des capteurs Arduino. Tout d'abord, nous avons présenté le site
     web avec la partie "connaissances" qui sera utile pour les évaluations. Ensuite, nous avons regardé le teaser de la sortie à Lille.
     Puis, nous avons séparé la classe en 3 groupes, et chaque groupe a effectué un ou plusieurs ateliers. Les ateliers étaient des 
-    manipulations de capteurs arduino : écran LCD, niveau d'eau et de coder en scratch : cuve d'eau. Il y a un enjeu :
+    manipulations de capteurs arduino : écran LCD, niveau d'eau et de code en scratch : cuve d'eau. Il y avait un enjeu :
     le plus rapide (avec un résultat correct) reçoit une récompense !
     Voici la feuille de route : 
     <br>
