--- a/journal.html
+++ b/journal.html
@@ -31,6 +31,7 @@
             <div class="dropdown-content">
                 <a href= "connaissances.html" target="_blank">Cycle de l'eau</a>
                 <a href= "connaissances2.html" target="_blank">Amphi - gestion de l'eau</a>
+                <a href= "connaissances3.html" target="_blank">Fiches récapitulatives</a>
                 
             </div>
         </li>
@@ -178,8 +179,8 @@
     <p class="element">  
     Le but des 2 séances "informatique" était de manipuler des capteurs Arduino. Tout d'abord, nous avons présenté le site
     web avec la partie "connaissances" qui sera utile pour les évaluations. Ensuite, nous avons regardé le teaser de la sortie à Lille.
-    Puis, nous avons séparé la classe en 3 groupes, et chaque groupe a effectué un ou plusieurs ateliers. Les ateliers étaient des 
-    manipulations de capteurs arduino : écran LCD, niveau d'eau et de code en scratch : cuve d'eau. Il y avait un enjeu :
+    Puis, nous avons séparé la classe en 3 groupes, et chaque groupe a effectué un ou plusieurs ateliers. Les ateliers étaient basées sur des 
+    manipulations de capteurs arduino : atelier écran LCD, atelier niveau d'eau et sur du code en scratch : atelier cuve d'eau. Il y avait un enjeu :
     le plus rapide (avec un résultat correct) reçoit une récompense !
     Voici la feuille de route : 
     <br>
