--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2>Concrètement quel est le but de ce projet ?</h2>
         <p class="element"> 
             
-            Notre but est premièrement d'aider les élèves à avoir plus de connaissances sur le thème de l'eau. <br>
+            Notre but est d'aider les élèves à avoir plus de connaissances sur le thème de l'eau. <br>
             Nous souhaitons aussi accompagner les élèves dans la construction de leur avenir. Pour cela nous les consacrons <br>
             des séances à la prise de parole à l'oral, à la mobilité en transport en commun et à la découverte du monde des études <br>
             supérieures. Bref, nous voulons donner les outils aux élèves d'avoir confiance en leurs capacités. <br>
