--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         <h2>Qui ?</h2>
         <p class="element">
             
-            Les premiers participants du projet sont bien évidemment les élèves du collège, mais il ne faut pas oublier <br>
-        toutes les personnes qui s'investissent dans le projet. C'est Mme Aix, professeure de mathématiques au collège<br>
+            Les premiers participants du projet sont bien évidemment les élèves du collège, mais il ne faut pas oublier 
+        toutes les personnes qui s'investissent dans le projet. C'est Mme Aix, professeure de mathématiques au collège
         Maurice Schumann qui a sollicité des élèves de l'IMT Nord Europe pour prendre part à ce projet: Djariatou, Laura, Marie et Ruying. <br>
-        Au sein de notre école d'ingénieurs, M.Alleman vérifie que le projet avance bien. Nous pouvons aussi noter <br>
-        l'investissement des professeures du collège Maurice Schumann. Comme vous l'avez lu plus haut, le projet est pluridisciplinaire <br>
-        et l'aide de professeures de différentes spécialités rend le projet complet. Fanny Degroise, professeure de physique chimie, <br>
-        Chloé Patey, professeure de français, Maureen Soulard, professeure d'histoire-géographie et Fanny Szybowicz, <br>
+        Au sein de notre école d'ingénieurs, M.Alleman vérifie que le projet avance bien. Nous pouvons aussi noter
+        l'investissement des professeures du collège Maurice Schumann. Comme vous l'avez lu plus haut, le projet est pluridisciplinaire
+        et l'aide de professeures de différentes spécialités rend le projet complet. Fanny Degroise, professeure de physique chimie,
+        Chloé Patey, professeure de français, Maureen Soulard, professeure d'histoire-géographie et Fanny Szybowicz,
         professeure d'EPS ont toutes participé à des séances du projet.
         
         </p>
