--- a/journal.html
+++ b/journal.html
@@ -31,6 +31,8 @@
             <div class="dropdown-content">
                 <a href= "connaissances.html" target="_blank">Cycle de l'eau</a>
                 <a href= "connaissances2.html" target="_blank">Amphi - gestion de l'eau</a>
+                <a href= "Lille.html" target="_blank">Lille : Conseil Régional</a>
+                <a href= "Lille2.html" target="_blank">Lille : Ecluse</a>
                 <a href= "connaissances3.html" target="_blank">Fiches récapitulatives</a>
                 
             </div>
@@ -105,7 +107,7 @@
     Ils ont complété les différents schémas que nous leur avions distribué pour garder une trace écrites des connaissances.
     De plus, nous avons fait 3 expériences pour expliquer la deuxième étape du cycle, qui est l'étape du traitement de l'eau : 
     une expérience pour "nettoyer" l'eau, une utilisant la floculation et l'autre la décantation. La dernière expérience
-    consistait à tester différentes eaux et à comparer leur pH.
+    consistait à tester différentes eaux et à comparer leur pH. <br>
     Finalement, nous avons fait un récapitulatif de la séance qui arrive : la visite de l'IMT à Douai. <br>
     <embed src="Présentation sortie à Douai.pdf" width="500" height="300" type="application/pdf"/>
 </p>
@@ -181,7 +183,7 @@
     web avec la partie "connaissances" qui sera utile pour les évaluations. Ensuite, nous avons regardé le teaser de la sortie à Lille.
     Puis, nous avons séparé la classe en 3 groupes, et chaque groupe a effectué un ou plusieurs ateliers. Les ateliers étaient basées sur des 
     manipulations de capteurs arduino : atelier écran LCD, atelier niveau d'eau et sur du code en scratch : atelier cuve d'eau. Il y avait un enjeu :
-    le plus rapide (avec un résultat correct) reçoit une récompense !
+    le plus rapide (avec un résultat correct) reçoit une récompense ! <br>
     Voici la feuille de route : 
     <br>
     <embed src="Feuille de route.pdf" width="500" height="500" type="application/pdf"/>
