--- a/connaissances3.html
+++ b/connaissances3.html
@@ -31,6 +31,8 @@
             <div class="dropdown-content">
                 <a href= "connaissances.html" target="_blank">Cycle de l'eau</a>
                 <a href= "connaissances2.html" target="_blank">Amphi - gestion de l'eau</a>
+                <a href= "Lille.html" target="_blank">Lille : Conseil Régional</a>
+                <a href= "Lille2.html" target="_blank">Lille : Ecluse</a>
                 <a href= "connaissances3.html" target="_blank">Fiches récapitulatives</a>
             </div>
         </li>
