--- a/journal.html
+++ b/journal.html
@@ -72,6 +72,8 @@
     <a href="#S1">1ère séance : présentations</a><br>
     <a href="#S2">2ème séance : les cycles de l'eau</a><br>
     <a href="#S3">3ème séance : la visite de l'IMT</a><br>
+    <a href="#S4">4ème/5ème séance : les activités en informatique</a><br>
+    <a href="#S6">6ème séance : La sortie à Lille</a><br>
 </p>
 
 
@@ -202,6 +204,34 @@
 
 <p><br></p>
 
+<div id="S6">
+    <h2>La sortie à Lille</h2>
+
+    <p class="element">  
+    Le jeudi 15 février nous sommes allés tous ensemble à Lille. Les élèves sont arrivés en train vers 9h30. Durant toute
+    la matinée, nous avons visité le conseil régional avec deux guides et un conseiler régional : M. Fontaine. Nous avons
+    découvert les locaux, la salle Philippe Rapeneau qui est la salle de commissions et des séances ainsi que l'hémicycle. 
+    Ensuite, les élèves ont posé des questions à M. Fontaine.
+    Le midi, nous avons mangé sur des tables de pique-nique dans un parc.
+    L'après-midi, après avoir visité l'écluse du grand carré avec M. Dubois des Voies Navigables de l'eau, nous avons pu bénéficier
+    d'une visite guidée par M.Soulard du vieux Lille et du centre-ville.
+    A 16h et après avoir passé une super journée, nous sommes rentrés en train.
+    
+    <br>
+    </p>
+<p><br></p>
+<div class="container">
+    <div class="image-container" width="640" height="360" controls>
+        <img class="lille" src="CR questions.jpg" alt="Partie questions au conseilr régional">
+        <img class="lille" src="ecluse de haut.jpg" alt="Ecluse du Grand Carré">
+        <img class="lille" src="visite Soulard.jpg" alt="Viside guidée et personnalisée du vieux Lille et du centre ville">
+        <br>
+    </div>
+</div>
+</div>
+<p><br></p>
+<p><br></p>
+<p><br></p>
 
 </main>
 
