--- a/journal.html
+++ b/journal.html
@@ -74,6 +74,7 @@
     <a href="#S3">3ème séance : la visite de l'IMT</a><br>
     <a href="#S4">4ème/5ème séance : les activités en informatique</a><br>
     <a href="#S6">6ème séance : La sortie à Lille</a><br>
+    <a href="#S7">7ème séance : Le test de connaissances</a><br>
 </p>
 
 
@@ -231,6 +232,17 @@
 </div>
 <p><br></p>
 <p><br></p>
+
+<div id="S7">
+    <h2>Test de connaissances</h2>
+
+    <p class="element">  
+    Nous avons fait passé un test de connaissances aux élèves. Ce test portait sur tout ce que nous avons pu voir depuis
+    le début de l'année ensemble. Le but de cette séance était de faire le point sur des connaissances théoriques.
+    <br>
+    </p>
+<p><br></p>
+</div>
 <p><br></p>
 
 </main>
