--- a/journal.html
+++ b/journal.html
@@ -42,7 +42,7 @@
             <div class="dropdown-content">
                 <a href= "https://www.lesagencesdeleau.fr/" target="_blank">Agence de l'eau</a>
                 <a href= "https://www.vnf.fr/vnf/" target="_blank">Voies Navigables de France</a>
-                <a href="https://www.eaudeparis.fr/le-pavillon-de-leau">Musée Paris</a>
+                <a href="https://www.quaibranly.fr/fr/">Musée Paris</a>
                 <a href= "https://imt-nord-europe.fr/" target="_blank">IMT Nord Europe</a>
                 <a href= "https://college-maurice-schumann-pecquencourt.59.ac-lille.fr/" target="_blank">Maurice Schumann</a>
             </div>
