--- a/journal.html
+++ b/journal.html
@@ -75,6 +75,8 @@
     <a href="#S4">4ème/5ème séance : les activités en informatique</a><br>
     <a href="#S6">6ème séance : La sortie à Lille</a><br>
     <a href="#S7">7ème séance : Le test de connaissances</a><br>
+    <a href="#S8">8ème séance : Les perspectives d'avenir</a><br>
+    <a href="#S9">9ème séance : La sortie à Paris</a><br>
 </p>
 
 
@@ -239,6 +241,22 @@
     <p class="element">  
     Nous avons fait passé un test de connaissances aux élèves. Ce test portait sur tout ce que nous avons pu voir depuis
     le début de l'année ensemble. Le but de cette séance était de faire le point sur des connaissances théoriques.
+    <br>
+    </p>
+<p><br></p>
+</div>
+<p><br></p>
+
+<div id="S8">
+    <h2>Perspectives d'avenir</h2>
+
+    <p class="element">  
+            Lors de cette séance, nous avons corrigé le test de connaissances de la séance précédente de façon personnalisée.
+    Puis, nous avons répartis les élèves en petits groupes pour discuter de sujets de société. Le but était de prendre
+    le temps de nous écouter et surtout de poser des questions, même si nous ne trouvions pas de réponse. Nous avons ainsi pu réfléchir sur la place des femmes dans les métiers scientifiques,
+    sur l'environnement, sur l'importance de l'anglais dans la vie professionnelle et sur l'orientation.
+    Le but général de la séance était de discuter avec les élèves sur ces thèmes qui entrent en jeu dans leurs perspectives d’avenir, 
+    de les sensibiliser à ces thèmes mais aussi d’évaluer l’amélioration de leurs compétences à l’oral depuis le début du projet.
     <br>
     </p>
 <p><br></p>
