--- a/journal.html
+++ b/journal.html
@@ -252,7 +252,7 @@
 
     <p class="element">  
             Lors de cette séance, nous avons corrigé le test de connaissances de la séance précédente de façon personnalisée.
-    Puis, nous avons répartis les élèves en petits groupes pour discuter de sujets de société. Le but était de prendre
+    Puis, nous avons réparti les élèves en petits groupes pour discuter de sujets de société. Le but était de prendre
     le temps de nous écouter et surtout de poser des questions, même si nous ne trouvions pas de réponse. Nous avons ainsi pu réfléchir sur la place des femmes dans les métiers scientifiques,
     sur l'environnement, sur l'importance de l'anglais dans la vie professionnelle et sur l'orientation.
     Le but général de la séance était de discuter avec les élèves sur ces thèmes qui entrent en jeu dans leurs perspectives d’avenir, 
