--- a/journal.html
+++ b/journal.html
@@ -263,6 +263,38 @@
 </div>
 <p><br></p>
 
+<div id="S9">
+<h2>La sortie à Paris</h2>
+
+<p class="element">  
+    La sortie à Paris était la sortie la plus attendue par les élèves. Cette sortie à Paris était prévue mi-avril et a clôturé le projet. L'objectif de cette activité était d'amener les élèves à sortir de leur zone de confort.
+Les élèves sont arriverés à la gare de Douai à 7h. Puis, nous avons pris le train vers la gare du Nord. Toute la journée, nous avaons visité Paris en métro et à pied.
+Nous avons visité le Musée du Quai Branly. C’est un musée qui présente des œuvres du monde entier : Asie, Océanie, Afrique, Amériques. Nous avons préparé des activités pour que les élèves soient actifs tout au long de la visite. 
+Ensuite, nous sommes passés devant la tour Eiffel.
+Puis, nous avions rendez-vous à midi pour prendre des bateaux parisiens et visiter Paris depuis la Seine. Le départ s'est fait au pied de la tour Eiffel. Nous sommes passés devant les plus célèbres monuments parisiens : les Invalides, l’Assemblée Nationale, le musée d'Orsay, la statue de la Liberté et le Louvre… Nous avons donc eu un aperçu général de la ville tout en dégustant notre pique-nique.
+L’après-midi, nous avions prévu une visite guidée au Panthéon. Pour préparer cette visite, nous avions demandé aux élèves de regarder la panthéonisation des Manouchian : Mélinée et Missak.
+Après cette journée jalonnée de découvertes, nous sommes departis depuis la gare du Nord pour rentrer à Douai. Nous sommes arrrivés vers 19h.
+    
+    <br>
+    </p>
+<p><br></p>
+<div class="container">
+    <div class="image-container" width="640" height="360" controls>
+        <img class="lille" src="CR questions.jpg" alt="Photo de groupe dans les escaliers à Paris">
+        <img class="lille" src="ecluse de haut.jpg" alt="Musée du quai branly">
+        <img class="lille" src="visite Soulard.jpg" alt="Visite guidée au panthéon">
+        <br>
+    </div>
+</div>
+</div>
+<p><br></p>
+<p><br></p>
+
+
+
+
+
+        
 </main>
 
 
