--- a/journal.html
+++ b/journal.html
@@ -280,7 +280,7 @@ Après cette journée jalonnée de découvertes, nous sommes repartis depuis la 
 <p><br></p>
 <div class="container">
     <div class="image-container" width="640" height="360" controls>
-        <img class="lille" src="CR questions.jpg" alt="Photo de groupe dans les escaliers à Paris">
+        <img class="lille" src="IMG-20240411-WA0007.jpg" alt="Photo de groupe dans les escaliers à Paris">
         <img class="lille" src="ecluse de haut.jpg" alt="Musée du quai branly">
         <img class="lille" src="visite Soulard.jpg" alt="Visite guidée au panthéon">
         <br>
