--- a/journal.html
+++ b/journal.html
@@ -281,8 +281,8 @@ Après cette journée jalonnée de découvertes, nous sommes repartis depuis la 
 <div class="container">
     <div class="image-container" width="640" height="360" controls>
         <img class="lille" src="IMG-20240411-WA0007.jpg" alt="Photo de groupe dans les escaliers à Paris">
-        <img class="lille" src="ecluse de haut.jpg" alt="Musée du quai branly">
-        <img class="lille" src="visite Soulard.jpg" alt="Visite guidée au panthéon">
+        <img class="lille" src="20240411_111044.jpg" alt="Musée du quai branly">
+        <img class="lille" src="20240411_155231.jpg" alt="Visite guidée au panthéon">
         <br>
     </div>
 </div>
